// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown multi-choice dropdown with selection renders unchanged 1`] = `
.c9 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 24px;
  width: 100%;
}

.c7 {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  z-index: 0;
  border-radius: 4px;
  border: solid 2px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  background-position: center;
}

.c8 {
  color: #101521;
  margin-left: 32px;
  cursor: pointer;
}

.c5 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  height: 24px;
  width: 24px;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c5:checked ~ .c6 {
  background-color: #5D2DEF;
  background-image: url("/images/icons/check-small.svg");
}

.c5:focus-visible ~ .c6 {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c3 {
  padding: 6px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  cursor: pointer;
}

.c10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block-start: 2px;
  padding: 12px 16px;
  gap: 12px;
  background: #FFFFFF;
  border: 1px solid #868686;
  border-radius: 4px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  outline-color: rgba(93,45,239,0.32);
}

.c12 {
  position: absolute;
  top: -15px;
  left: 8px;
  padding-inline: 8px;
  background: #FFFFFF;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  visibility: visible;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
}

.c2 {
  display: none;
  position: absolute;
  top: -1px;
  right: -1px;
  left: -1px;
  padding-block: 11px 7px;
  max-height: 70vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  border: inherit;
  background: inherit;
  overflow-y: auto;
  z-index: 1;
}

.c2 + .c11 {
  z-index: auto;
}

.c13 {
  width: 24px;
  height: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: grid;
  place-content: center;
}

<div>
  <div
    class="c0"
    data-testid="dropdown-wrapper"
    tabindex="0"
  >
    <div
      class="c1"
    >
      Select
    </div>
    <div
      aria-hidden="false"
      aria-labelledby=":rk:"
      aria-multiselectable="true"
      class="c2"
      role="listbox"
    >
      <label
        aria-selected="false"
        class="c3"
        for=":rl:-Option 1-option1"
        role="option"
        title="Option 1"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rl:-Option 1-option1"
            name=":rl:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rl:-Option 1-option1"
          >
            <span
              class="c9 c10"
            >
              Option 1
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rl:-Option 2-option2"
        role="option"
        title="Option 2"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rl:-Option 2-option2"
            name=":rl:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rl:-Option 2-option2"
          >
            <span
              class="c9 c10"
            >
              Option 2
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rl:-Option 3-option3"
        role="option"
        title="Option 3"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rl:-Option 3-option3"
            name=":rl:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rl:-Option 3-option3"
          >
            <span
              class="c9 c10"
            >
              Option 3
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rl:-Option 4-option4"
        role="option"
        title="Option 4"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rl:-Option 4-option4"
            name=":rl:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rl:-Option 4-option4"
          >
            <span
              class="c9 c10"
            >
              Option 4
            </span>
          </label>
        </div>
      </label>
    </div>
    <label
      class="c11 c12"
      id=":rk:"
    >
      Options dropdown
    </label>
    <svg
      class="c13"
    />
  </div>
</div>
`;

exports[`Dropdown multi-choice dropdown without selection renders unchanged with prompt 1`] = `
.c9 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 24px;
  width: 100%;
}

.c7 {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  z-index: 0;
  border-radius: 4px;
  border: solid 2px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  background-position: center;
}

.c8 {
  color: #101521;
  margin-left: 32px;
  cursor: pointer;
}

.c5 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  height: 24px;
  width: 24px;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c5:checked ~ .c6 {
  background-color: #5D2DEF;
  background-image: url("/images/icons/check-small.svg");
}

.c5:focus-visible ~ .c6 {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c3 {
  padding: 6px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  cursor: pointer;
}

.c10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block-start: 2px;
  padding: 12px 16px;
  gap: 12px;
  background: #FFFFFF;
  border: 1px solid #868686;
  border-radius: 4px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  outline-color: rgba(93,45,239,0.32);
}

.c12 {
  position: absolute;
  top: -15px;
  left: 8px;
  padding-inline: 8px;
  background: #FFFFFF;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  visibility: visible;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
}

.c2 {
  display: none;
  position: absolute;
  top: -1px;
  right: -1px;
  left: -1px;
  padding-block: 11px 7px;
  max-height: 70vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  border: inherit;
  background: inherit;
  overflow-y: auto;
  z-index: 1;
}

.c2 + .c11 {
  z-index: auto;
}

.c13 {
  width: 24px;
  height: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: grid;
  place-content: center;
}

<div>
  <div
    class="c0"
    data-testid="dropdown-wrapper"
    tabindex="0"
  >
    <div
      class="c1"
    >
      Pick multiple
    </div>
    <div
      aria-hidden="false"
      aria-labelledby=":rm:"
      aria-multiselectable="true"
      class="c2"
      role="listbox"
    >
      <label
        aria-selected="false"
        class="c3"
        for=":rn:-Option 1-option1"
        role="option"
        title="Option 1"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rn:-Option 1-option1"
            name=":rn:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rn:-Option 1-option1"
          >
            <span
              class="c9 c10"
            >
              Option 1
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rn:-Option 2-option2"
        role="option"
        title="Option 2"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rn:-Option 2-option2"
            name=":rn:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rn:-Option 2-option2"
          >
            <span
              class="c9 c10"
            >
              Option 2
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rn:-Option 3-option3"
        role="option"
        title="Option 3"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rn:-Option 3-option3"
            name=":rn:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rn:-Option 3-option3"
          >
            <span
              class="c9 c10"
            >
              Option 3
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rn:-Option 4-option4"
        role="option"
        title="Option 4"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rn:-Option 4-option4"
            name=":rn:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rn:-Option 4-option4"
          >
            <span
              class="c9 c10"
            >
              Option 4
            </span>
          </label>
        </div>
      </label>
    </div>
    <label
      class="c11 c12"
      id=":rm:"
    >
      Options dropdown
    </label>
    <svg
      class="c13"
    />
  </div>
</div>
`;

exports[`Dropdown multi-choice dropdown without selection renders unchanged without prompt 1`] = `
.c9 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 24px;
  width: 100%;
}

.c7 {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  z-index: 0;
  border-radius: 4px;
  border: solid 2px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  background-position: center;
}

.c8 {
  color: #101521;
  margin-left: 32px;
  cursor: pointer;
}

.c5 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  height: 24px;
  width: 24px;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c5:checked ~ .c6 {
  background-color: #5D2DEF;
  background-image: url("/images/icons/check-small.svg");
}

.c5:focus-visible ~ .c6 {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c3 {
  padding: 6px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  cursor: pointer;
}

.c10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block-start: 2px;
  padding: 12px 16px;
  gap: 12px;
  background: #FFFFFF;
  border: 1px solid #868686;
  border-radius: 4px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  outline-color: rgba(93,45,239,0.32);
}

.c12 {
  position: absolute;
  top: -15px;
  left: 8px;
  padding-inline: 8px;
  background: #FFFFFF;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  visibility: visible;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
}

.c2 {
  display: none;
  position: absolute;
  top: -1px;
  right: -1px;
  left: -1px;
  padding-block: 11px 7px;
  max-height: 70vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  border: inherit;
  background: inherit;
  overflow-y: auto;
  z-index: 1;
}

.c2 + .c11 {
  z-index: auto;
}

.c13 {
  width: 24px;
  height: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: grid;
  place-content: center;
}

<div>
  <div
    class="c0"
    data-testid="dropdown-wrapper"
    tabindex="0"
  >
    <div
      class="c1"
    >
      Select
    </div>
    <div
      aria-hidden="false"
      aria-labelledby=":ro:"
      aria-multiselectable="true"
      class="c2"
      role="listbox"
    >
      <label
        aria-selected="false"
        class="c3"
        for=":rp:-Option 1-option1"
        role="option"
        title="Option 1"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rp:-Option 1-option1"
            name=":rp:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rp:-Option 1-option1"
          >
            <span
              class="c9 c10"
            >
              Option 1
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rp:-Option 2-option2"
        role="option"
        title="Option 2"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rp:-Option 2-option2"
            name=":rp:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rp:-Option 2-option2"
          >
            <span
              class="c9 c10"
            >
              Option 2
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rp:-Option 3-option3"
        role="option"
        title="Option 3"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rp:-Option 3-option3"
            name=":rp:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rp:-Option 3-option3"
          >
            <span
              class="c9 c10"
            >
              Option 3
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rp:-Option 4-option4"
        role="option"
        title="Option 4"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rp:-Option 4-option4"
            name=":rp:"
            type="checkbox"
          />
          <div
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rp:-Option 4-option4"
          >
            <span
              class="c9 c10"
            >
              Option 4
            </span>
          </label>
        </div>
      </label>
    </div>
    <label
      class="c11 c12"
      id=":ro:"
    >
      Options dropdown
    </label>
    <svg
      class="c13"
    />
  </div>
</div>
`;

exports[`Dropdown single-choice dropdown with selection renders unchanged 1`] = `
.c9 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

.c7 {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  z-index: 0;
  border-radius: 50%;
  border: solid 2px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  background-position: center;
}

.c5 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  height: 24px;
  width: 24px;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c5:checked ~ .c6 {
  background-color: #5D2DEF;
}

.c5:checked ~ .c6::after {
  content: "";
  border-radius: 50%;
  position: absolute;
  top: 4px;
  left: 4px;
  height: 12px;
  width: 12px;
  z-index: 0;
  background-color: white;
}

.c5:focus-visible ~ .c6 {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c8 {
  margin-left: 32px;
  color: #101521;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 24px;
  width: 100%;
}

.c3 {
  padding: 6px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  cursor: pointer;
}

.c10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block-start: 2px;
  padding: 12px 16px;
  gap: 12px;
  background: #FFFFFF;
  border: 1px solid #868686;
  border-radius: 4px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  outline-color: rgba(93,45,239,0.32);
}

.c12 {
  position: absolute;
  top: -15px;
  left: 8px;
  padding-inline: 8px;
  background: #FFFFFF;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  visibility: visible;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
}

.c2 {
  display: none;
  position: absolute;
  top: -1px;
  right: -1px;
  left: -1px;
  padding-block: 11px 7px;
  max-height: 70vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  border: inherit;
  background: inherit;
  overflow-y: auto;
  z-index: 1;
}

.c2 + .c11 {
  z-index: auto;
}

.c13 {
  width: 24px;
  height: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: grid;
  place-content: center;
}

<div>
  <div
    class="c0"
    data-testid="dropdown-wrapper"
    tabindex="0"
  >
    <div
      class="c1"
    >
      Option 2
    </div>
    <div
      aria-hidden="false"
      aria-labelledby=":re:"
      class="c2"
      role="listbox"
    >
      <label
        aria-selected="false"
        class="c3"
        for=":rf:-Option 1-option1"
        role="option"
        title="Option 1"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rf:-Option 1-option1"
            name=":rf:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rf:-Option 1-option1"
          >
            <span
              class="c9 c10"
            >
              Option 1
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="true"
        class="c3"
        for=":rf:-Option 2-option2"
        role="option"
        title="Option 2"
      >
        <div
          class="c4"
        >
          <input
            checked=""
            class="c5"
            id=":rf:-Option 2-option2"
            name=":rf:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rf:-Option 2-option2"
          >
            <span
              class="c9 c10"
            >
              Option 2
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rf:-Option 3-option3"
        role="option"
        title="Option 3"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rf:-Option 3-option3"
            name=":rf:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rf:-Option 3-option3"
          >
            <span
              class="c9 c10"
            >
              Option 3
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rf:-Option 4-option4"
        role="option"
        title="Option 4"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rf:-Option 4-option4"
            name=":rf:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rf:-Option 4-option4"
          >
            <span
              class="c9 c10"
            >
              Option 4
            </span>
          </label>
        </div>
      </label>
    </div>
    <label
      class="c11 c12"
      id=":re:"
    >
      Options dropdown
    </label>
    <svg
      class="c13"
    />
  </div>
</div>
`;

exports[`Dropdown single-choice dropdown without selection renders unchanged with prompt 1`] = `
.c9 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

.c7 {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  z-index: 0;
  border-radius: 50%;
  border: solid 2px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  background-position: center;
}

.c5 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  height: 24px;
  width: 24px;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c5:checked ~ .c6 {
  background-color: #5D2DEF;
}

.c5:checked ~ .c6::after {
  content: "";
  border-radius: 50%;
  position: absolute;
  top: 4px;
  left: 4px;
  height: 12px;
  width: 12px;
  z-index: 0;
  background-color: white;
}

.c5:focus-visible ~ .c6 {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c8 {
  margin-left: 32px;
  color: #101521;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 24px;
  width: 100%;
}

.c3 {
  padding: 6px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  cursor: pointer;
}

.c10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block-start: 2px;
  padding: 12px 16px;
  gap: 12px;
  background: #FFFFFF;
  border: 1px solid #868686;
  border-radius: 4px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  outline-color: rgba(93,45,239,0.32);
}

.c12 {
  position: absolute;
  top: -15px;
  left: 8px;
  padding-inline: 8px;
  background: #FFFFFF;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  visibility: visible;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
}

.c2 {
  display: none;
  position: absolute;
  top: -1px;
  right: -1px;
  left: -1px;
  padding-block: 11px 7px;
  max-height: 70vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  border: inherit;
  background: inherit;
  overflow-y: auto;
  z-index: 1;
}

.c2 + .c11 {
  z-index: auto;
}

.c13 {
  width: 24px;
  height: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: grid;
  place-content: center;
}

<div>
  <div
    class="c0"
    data-testid="dropdown-wrapper"
    tabindex="0"
  >
    <div
      class="c1"
    >
      Pick one
    </div>
    <div
      aria-hidden="false"
      aria-labelledby=":rg:"
      class="c2"
      role="listbox"
    >
      <label
        aria-selected="false"
        class="c3"
        for=":rh:-Option 1-option1"
        role="option"
        title="Option 1"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rh:-Option 1-option1"
            name=":rh:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rh:-Option 1-option1"
          >
            <span
              class="c9 c10"
            >
              Option 1
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rh:-Option 2-option2"
        role="option"
        title="Option 2"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rh:-Option 2-option2"
            name=":rh:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rh:-Option 2-option2"
          >
            <span
              class="c9 c10"
            >
              Option 2
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rh:-Option 3-option3"
        role="option"
        title="Option 3"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rh:-Option 3-option3"
            name=":rh:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rh:-Option 3-option3"
          >
            <span
              class="c9 c10"
            >
              Option 3
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rh:-Option 4-option4"
        role="option"
        title="Option 4"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rh:-Option 4-option4"
            name=":rh:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rh:-Option 4-option4"
          >
            <span
              class="c9 c10"
            >
              Option 4
            </span>
          </label>
        </div>
      </label>
    </div>
    <label
      class="c11 c12"
      id=":rg:"
    >
      Options dropdown
    </label>
    <svg
      class="c13"
    />
  </div>
</div>
`;

exports[`Dropdown single-choice dropdown without selection renders unchanged without prompt 1`] = `
.c9 {
  font-family: "Inter";
  font-style: normal;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

.c7 {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 24px;
  width: 24px;
  z-index: 0;
  border-radius: 50%;
  border: solid 2px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  background-position: center;
}

.c5 {
  position: absolute;
  opacity: 0;
  z-index: 1;
  height: 24px;
  width: 24px;
  top: 0;
  left: 0;
  margin: 0;
  cursor: pointer;
}

.c5:checked ~ .c6 {
  background-color: #5D2DEF;
}

.c5:checked ~ .c6::after {
  content: "";
  border-radius: 50%;
  position: absolute;
  top: 4px;
  left: 4px;
  height: 12px;
  width: 12px;
  z-index: 0;
  background-color: white;
}

.c5:focus-visible ~ .c6 {
  box-shadow: 0 0 0 4px rgba(93,45,239,0.32);
}

.c8 {
  margin-left: 32px;
  color: #101521;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 24px;
  width: 100%;
}

.c3 {
  padding: 6px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  cursor: pointer;
}

.c10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-block-start: 2px;
  padding: 12px 16px;
  gap: 12px;
  background: #FFFFFF;
  border: 1px solid #868686;
  border-radius: 4px;
  position: relative;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus-visible {
  outline-color: rgba(93,45,239,0.32);
}

.c12 {
  position: absolute;
  top: -15px;
  left: 8px;
  padding-inline: 8px;
  background: #FFFFFF;
  font-size: 16px;
  font-weight: 600;
  line-height: 24px;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  visibility: visible;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
}

.c2 {
  display: none;
  position: absolute;
  top: -1px;
  right: -1px;
  left: -1px;
  padding-block: 11px 7px;
  max-height: 70vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: inherit;
  border: inherit;
  background: inherit;
  overflow-y: auto;
  z-index: 1;
}

.c2 + .c11 {
  z-index: auto;
}

.c13 {
  width: 24px;
  height: 24px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: grid;
  place-content: center;
}

<div>
  <div
    class="c0"
    data-testid="dropdown-wrapper"
    tabindex="0"
  >
    <div
      class="c1"
    >
      Select
    </div>
    <div
      aria-hidden="false"
      aria-labelledby=":ri:"
      class="c2"
      role="listbox"
    >
      <label
        aria-selected="false"
        class="c3"
        for=":rj:-Option 1-option1"
        role="option"
        title="Option 1"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rj:-Option 1-option1"
            name=":rj:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rj:-Option 1-option1"
          >
            <span
              class="c9 c10"
            >
              Option 1
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rj:-Option 2-option2"
        role="option"
        title="Option 2"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rj:-Option 2-option2"
            name=":rj:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rj:-Option 2-option2"
          >
            <span
              class="c9 c10"
            >
              Option 2
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rj:-Option 3-option3"
        role="option"
        title="Option 3"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rj:-Option 3-option3"
            name=":rj:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rj:-Option 3-option3"
          >
            <span
              class="c9 c10"
            >
              Option 3
            </span>
          </label>
        </div>
      </label>
      <label
        aria-selected="false"
        class="c3"
        for=":rj:-Option 4-option4"
        role="option"
        title="Option 4"
      >
        <div
          class="c4"
        >
          <input
            class="c5"
            id=":rj:-Option 4-option4"
            name=":rj:"
            type="radio"
          />
          <label
            class="c6 c7"
          />
          <label
            class="c8"
            for=":rj:-Option 4-option4"
          >
            <span
              class="c9 c10"
            >
              Option 4
            </span>
          </label>
        </div>
      </label>
    </div>
    <label
      class="c11 c12"
      id=":ri:"
    >
      Options dropdown
    </label>
    <svg
      class="c13"
    />
  </div>
</div>
`;
